{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 127,
  "lineage": "529f77e2-7bbe-039d-d3f6-51805d000fe0",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Network/networkInterfaces/jenkins-master-nic",
            "internal_domain_name_suffix": "ybbamsi5rc5elkvqmyfrqhubrg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Network/publicIPAddresses/jenkins-master-pip",
                "subnet_id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Network/virtualNetworks/devops-V-net/subnets/subnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "7C-1E-52-0B-4B-CA",
            "name": "jenkins-master-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "devops-project",
            "virtual_machine_id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Compute/virtualMachines/jenkins-master"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.jenkins_subnet",
            "azurerm_virtual_network.v-net"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Network/networkInterfaces/k8s-nic",
            "internal_domain_name_suffix": "ybbamsi5rc5elkvqmyfrqhubrg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Network/publicIPAddresses/k8s-pip",
                "subnet_id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Network/virtualNetworks/devops-V-net/subnets/subnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "00-22-48-21-CF-BF",
            "name": "k8s-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "devops-project",
            "virtual_machine_id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Compute/virtualMachines/k8s-vm"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.jenkins_subnet",
            "azurerm_virtual_network.v-net"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Network/networkInterfaces/jenkins-agent-1-nic",
            "internal_domain_name_suffix": "ybbamsi5rc5elkvqmyfrqhubrg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Network/publicIPAddresses/jenkins-agent-1-pip",
                "subnet_id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Network/virtualNetworks/devops-V-net/subnets/subnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "00-22-48-1E-A4-38",
            "name": "jenkins-agent-1-nic",
            "private_ip_address": "10.0.1.6",
            "private_ip_addresses": [
              "10.0.1.6"
            ],
            "resource_group_name": "devops-project",
            "virtual_machine_id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Compute/virtualMachines/jenkins-agent-1"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.jenkins_subnet",
            "azurerm_virtual_network.v-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Network/networkSecurityGroups/network-security-group",
            "location": "eastus",
            "name": "network-security-group",
            "resource_group_name": "devops-project",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Allow-all",
                "priority": 103,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.v-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Network/networkSecurityGroups/network-security-group/securityRules/Allow-all",
            "name": "Allow-all",
            "network_security_group_name": "network-security-group",
            "priority": 103,
            "protocol": "Tcp",
            "resource_group_name": "devops-project",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.v-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8080",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Network/networkSecurityGroups/network-security-group/securityRules/Allow-HTTP",
            "name": "Allow-HTTP",
            "network_security_group_name": "network-security-group",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "devops-project",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.v-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Network/networkSecurityGroups/network-security-group/securityRules/Allow-SSH",
            "name": "Allow-SSH",
            "network_security_group_name": "network-security-group",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "devops-project",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.v-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Network/publicIPAddresses/jenkins-master-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.191.194.100",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "jenkins-master-pip",
            "resource_group_name": "devops-project",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.v-net"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Network/publicIPAddresses/k8s-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.191.56.170",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "k8s-pip",
            "resource_group_name": "devops-project",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.v-net"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Network/publicIPAddresses/jenkins-agent-1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.191.49.69",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "jenkins-agent-1-pip",
            "resource_group_name": "devops-project",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.v-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "jenkins_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Network/virtualNetworks/devops-V-net/subnets/subnet1",
            "name": "subnet1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "devops-project",
            "virtual_network_name": "devops-V-net"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.v-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Network/virtualNetworks/devops-V-net/subnets/subnet1",
            "network_security_group_id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Network/networkSecurityGroups/network-security-group",
            "subnet_id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Network/virtualNetworks/devops-V-net/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.jenkins_subnet",
            "azurerm_virtual_network.v-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "v-net",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "490642c0-881f-45be-aab0-660b181e818e",
            "id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Network/virtualNetworks/devops-V-net",
            "location": "eastus",
            "name": "devops-V-net",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "devops-project",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Network/virtualNetworks/devops-V-net/subnets/subnet1",
                "name": "subnet1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/d280007c-c6c9-4cfb-bcef-0bb98fff82cd/resourceGroups/devops-project/providers/Microsoft.Network/networkSecurityGroups/network-security-group"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}